--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "AirportCEO ModManager for Mac",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
   },
   "author": "Josh Wagner",
   "license": "ISC",
