Revert "Switch to electron-forge Vue.js boilerplate"
This reverts commit 310bef65ff7690ce87740b401337148f687fcf55.

--- a/package.json
+++ b/package.json
@@ -1,62 +1,18 @@
 {
   "name": "aceommmac",
-  "productName": "aceommmac",
   "version": "1.0.0",
-  "description": "My Electron application description",
-  "main": "src/index.js",
+  "description": "AirportCEO ModManager for Mac",
+  "main": "main.js",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
   },
-  "keywords": [],
-  "author": "jbwagner",
-  "license": "MIT",
-  "config": {
-    "forge": {
-      "make_targets": {
-        "win32": [
-          "squirrel"
-        ],
-        "darwin": [
-          "zip"
-        ],
-        "linux": [
-          "deb",
-          "rpm"
-        ]
-      },
-      "electronPackagerConfig": {
-        "packageManager": "npm"
-      },
-      "electronWinstallerConfig": {
-        "name": "aceommmac"
-      },
-      "electronInstallerDebian": {},
-      "electronInstallerRedhat": {},
-      "github_repository": {
-        "owner": "",
-        "name": ""
-      },
-      "windowsStoreConfig": {
-        "packageName": "",
-        "name": "aceommmac"
-      }
-    }
+  "author": "Josh Wagner",
+  "license": "ISC",
+  "devDependencies": {
+    "electron": "^3.0.0-beta.10"
   },
   "dependencies": {
-    "electron-compile": "^6.4.3",
-    "electron-devtools-installer": "^2.2.4",
-    "electron-squirrel-startup": "^1.0.0",
     "vue": "^2.5.17"
-  },
-  "devDependencies": {
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "electron-forge": "^5.2.2",
-    "electron-prebuilt-compile": "2.0.7"
   }
 }
