--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "Josh Wagner",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^3.0.0-beta.10"
+    "babel": "^6.23.0",
+    "electron": "^3.0.0-beta.10",
+    "webpack": "^4.17.2",
+    "webpack-cli": "^3.1.0"
   },
   "dependencies": {
     "vue": "^2.5.17"
