--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "license": "ISC",
   "devDependencies": {
     "babel": "^6.23.0",
+    "css-loader": "^1.0.0",
     "electron": "^3.0.0-beta.10",
+    "electron-reload": "^1.2.5",
+    "file-loader": "^2.0.0",
+    "vue-loader": "^15.4.2",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0"
   },
