--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+    "dev": "webpack --mode=development",
+    "build": "webpack --mode=production"
   },
   "author": "Josh Wagner",
   "license": "ISC",
