--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "electron-reload": "^1.2.5",
     "file-loader": "^2.0.0",
     "vue-loader": "^15.4.2",
+    "vue-template-compiler": "^2.5.17",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0"
   },
