--- a/package.json
+++ b/package.json
@@ -1,29 +1,62 @@
 {
-  "name": "aceommmac",
+  "name": "aceomm",
+  "productName": "aceomm",
   "version": "1.0.0",
-  "description": "AirportCEO ModManager for Mac",
-  "main": "main.js",
+  "description": "My Electron application description",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron .",
-    "dev": "webpack --mode=development",
-    "build": "webpack --mode=production"
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "echo \"No linting configured\""
   },
-  "author": "Josh Wagner",
-  "license": "ISC",
-  "devDependencies": {
-    "babel": "^6.23.0",
-    "css-loader": "^1.0.0",
-    "electron": "^3.0.0-beta.10",
-    "electron-reload": "^1.2.5",
-    "file-loader": "^2.0.0",
-    "vue-loader": "^15.4.2",
-    "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.17.2",
-    "webpack-cli": "^3.1.0"
+  "keywords": [],
+  "author": "jbwagner",
+  "license": "MIT",
+  "config": {
+    "forge": {
+      "make_targets": {
+        "win32": [
+          "squirrel"
+        ],
+        "darwin": [
+          "zip"
+        ],
+        "linux": [
+          "deb",
+          "rpm"
+        ]
+      },
+      "electronPackagerConfig": {
+        "packageManager": "npm"
+      },
+      "electronWinstallerConfig": {
+        "name": "aceomm"
+      },
+      "electronInstallerDebian": {},
+      "electronInstallerRedhat": {},
+      "github_repository": {
+        "owner": "",
+        "name": ""
+      },
+      "windowsStoreConfig": {
+        "packageName": "",
+        "name": "aceomm"
+      }
+    }
   },
   "dependencies": {
-    "foundation-sites": "^6.5.0-rc.2",
+    "electron-compile": "^6.4.3",
+    "electron-devtools-installer": "^2.2.4",
+    "electron-squirrel-startup": "^1.0.0",
     "vue": "^2.5.17"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "electron-forge": "^5.2.2",
+    "electron-prebuilt-compile": "2.0.7"
   }
 }
