--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "electron-compile": "^6.4.3",
     "electron-devtools-installer": "^2.2.4",
     "electron-squirrel-startup": "^1.0.0",
+    "fs": "0.0.1-security",
     "vue": "^2.5.17",
-    "vue-resource": "^1.5.1"
+    "vue-resource": "^1.5.1",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
