Add proper filtering

--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "fs": "0.0.1-security",
     "vue": "^2.5.17",
     "vue-resource": "^1.5.1",
-    "xml2js": "^0.4.19"
+    "xml2js": "^0.4.19",
+    "xml2json": "^0.11.2"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
