--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "electron-compile": "^6.4.3",
     "electron-devtools-installer": "^2.2.4",
     "electron-squirrel-startup": "^1.0.0",
+    "foundation-sites": "^6.5.0-rc.3",
     "fs": "0.0.1-security",
+    "jquery": "^3.3.1",
     "vue": "^2.5.17",
     "vue-resource": "^1.5.1",
     "xml2js": "^0.4.19",
