--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "babel-preset-react": "^6.24.1",
     "electron-forge": "^5.2.2",
     "electron-prebuilt-compile": "2.0.7",
-    "vueify": "^9.4.1"
+    "vueify": "^9.4.1",
+    "webpack": "^4.19.0"
   }
 }
