--- a/package.json
+++ b/package.json
@@ -62,8 +62,12 @@
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^1.0.0",
     "electron-forge": "^5.2.2",
     "electron-prebuilt-compile": "2.0.7",
+    "mini-css-extract-plugin": "^0.4.2",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
     "vueify": "^9.4.1",
     "webpack": "^4.19.0"
   }
