--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "lint": "echo \"No linting configured\"",
+    "webpack": "webpack --development"
   },
   "keywords": [],
   "author": "jbwagner",
@@ -55,7 +56,6 @@
     "jquery": "^3.3.1",
     "vue": "^2.5.17",
     "vue-resource": "^1.5.1",
-    "xml2js": "^0.4.19",
     "xml2json": "^0.11.2"
   },
   "devDependencies": {
@@ -66,9 +66,11 @@
     "electron-forge": "^5.2.2",
     "electron-prebuilt-compile": "2.0.7",
     "mini-css-extract-plugin": "^0.4.2",
+    "node-sass": "^4.9.3",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "vueify": "^9.4.1",
-    "webpack": "^4.19.0"
+    "webpack": "^4.19.0",
+    "webpack-cli": "^3.1.0"
   }
 }
