--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "productName": "aceomm",
   "version": "1.0.0",
   "description": "My Electron application description",
-  "main": "src/index.js",
+  "main": "./src/index.js",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\"",
-    "webpack": "webpack --watch --mode=development"
+    "lint": "echo \"No linting configured\""
   },
   "keywords": [],
   "author": "jbwagner",
@@ -62,15 +61,8 @@
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^1.0.0",
     "electron-forge": "^5.2.2",
     "electron-prebuilt-compile": "2.0.7",
-    "mini-css-extract-plugin": "^0.4.2",
-    "node-sass": "^4.9.3",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.1.0",
-    "vueify": "^9.4.1",
-    "webpack": "^4.19.0",
-    "webpack-cli": "^3.1.0"
+    "vueify": "^9.4.1"
   }
 }
