--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "aceomm",
-  "productName": "aceomm",
+  "name": "my-new-app-two",
+  "productName": "my-new-app-two",
   "version": "1.0.0",
   "description": "My Electron application description",
-  "main": "./src/index.js",
+  "main": "./.webpack/main",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
@@ -16,53 +16,67 @@
   "license": "MIT",
   "config": {
     "forge": {
-      "make_targets": {
-        "win32": [
-          "squirrel"
-        ],
-        "darwin": [
-          "zip"
-        ],
-        "linux": [
-          "deb",
-          "rpm"
+      "packagerConfig": {},
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "my_new_app_two"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {}
+        }
+      ],
+      "plugins": [
+        [
+          "@electron-forge/plugin-webpack",
+          {
+            "mainConfig": "./webpack.main.config.js",
+            "renderer": {
+              "config": "./webpack.renderer.config.js",
+              "entryPoints": [
+                {
+                  "html": "./src/renderer/index.html",
+                  "js": "./src/renderer/index.js",
+                  "name": "main_window"
+                }
+              ]
+            }
+          }
         ]
-      },
-      "electronPackagerConfig": {
-        "packageManager": "npm"
-      },
-      "electronWinstallerConfig": {
-        "name": "aceomm"
-      },
-      "electronInstallerDebian": {},
-      "electronInstallerRedhat": {},
-      "github_repository": {
-        "owner": "",
-        "name": ""
-      },
-      "windowsStoreConfig": {
-        "packageName": "",
-        "name": "aceomm"
-      }
+      ]
     }
   },
   "dependencies": {
-    "electron-compile": "^6.4.3",
-    "electron-devtools-installer": "^2.2.4",
     "electron-squirrel-startup": "^1.0.0",
-    "foundation-sites": "^6.5.0-rc.3",
-    "fs": "0.0.1-security",
-    "jquery": "^3.3.1",
     "vue": "^2.5.17",
-    "vue-resource": "^1.5.1",
-    "xml2json": "^0.11.2"
+    "vue-resource": "^1.5.1"
   },
   "devDependencies": {
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "electron-forge": "^5.2.2",
-    "electron-prebuilt-compile": "2.0.7",
-    "vueify": "^9.4.1"
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@electron-forge/cli": "^6.0.0-beta.28",
+    "@electron-forge/maker-deb": "^6.0.0-beta.28",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.28",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.28",
+    "@electron-forge/maker-zip": "^6.0.0-beta.28",
+    "@electron-forge/plugin-webpack": "^6.0.0-beta.22",
+    "babel-loader": "^8.0.2",
+    "css-loader": "^1.0.0",
+    "electron": "3.0.0",
+    "file-loader": "^2.0.0",
+    "vue-loader": "^15.4.2"
   }
 }
